# AI_pal

./: README.md  app.py  pyproject.toml  requirements  requirements.txt  👤_GPTpal.py
.streamlit/: config.toml
pages/: 1_🔗_Connectors.py
utils/: tools.py
